--- a/BackEnd/chartflow/src/main/resources/application.properties
+++ b/BackEnd/chartflow/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # MySQL8 ??
+server.servlet.context-path=/api
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/chartflow?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.username=ssafy17
+spring.datasource.password=ssafy17
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Enable HTTPS
@@ -37,16 +38,16 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.apache.tiles=INFO
 logging.level.org.sringframework.boot=DEBUG
 logging.level.org.sringframework.security=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
 
-#?? ?? ? ??? ??
-#mail
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=""
-#spring.mail.password=""
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.timeout=5000
-#spring.mail.properties.mail.smtp.starttls.enable=true
+# Email Authentication setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=chartflow.a107@gmail.com
+spring.mail.password=jfulbzweutrwhqlj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.devtools.livereload.enabled=true
 
