--- a/.gitignore
+++ b/.gitignore
@@ -418,6 +418,7 @@ modules.xml
 hs_err_pid*
 replay_pid*
 
+
 ### Windows ###
 # Windows thumbnail cache files
 
@@ -431,3 +432,4 @@ replay_pid*
 # Windows shortcuts
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,windows
+**/generated/
