--- a/BackEnd/chartflow/src/main/resources/application.properties
+++ b/BackEnd/chartflow/src/main/resources/application.properties
@@ -54,3 +54,12 @@ spring.devtools.livereload.enabled=true
 #file size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# springdoc properties
+springdoc.packages-to-scan=com.ssafy.chartflow
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+springdoc.swagger-ui.path=/
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.operations-sorter=alpha
