--- a/BackEnd/chartflow/src/main/resources/application.properties
+++ b/BackEnd/chartflow/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.servlet.multipart.maxRequestSize=50MB
 
 # hibernate ??
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=false
