setting: Redis 설정

--- a/BackEnd/chartflow/src/main/resources/application.properties
+++ b/BackEnd/chartflow/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.username=ssafy17
 spring.datasource.password=ssafy17
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+
 ## Enable HTTPS
 #server.ssl.enabled=true
 #
