--- a/FrontEnd/chartflow/package.json
+++ b/FrontEnd/chartflow/package.json
@@ -51,5 +51,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^20.5.9"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
